--- a/Comp2614Assignment4/Comp2614Assignment4.csproj
+++ b/Comp2614Assignment4/Comp2614Assignment4.csproj
@@ -70,6 +70,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
     <EmbeddedResource Include="DepositDialog.resx">
       <DependentUpon>DepositDialog.cs</DependentUpon>
     </EmbeddedResource>
