--- a/Comp2614Assignment4/Comp2614Assignment4.csproj
+++ b/Comp2614Assignment4/Comp2614Assignment4.csproj
@@ -56,6 +56,7 @@
     <Compile Include="DepositDialog.Designer.cs">
       <DependentUpon>DepositDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="DepositTransaction.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +71,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transaction.cs" />
     <Compile Include="Utils.cs" />
     <EmbeddedResource Include="DepositDialog.resx">
       <DependentUpon>DepositDialog.cs</DependentUpon>
