--- a/Comp2614Assignment4/Comp2614Assignment4.csproj
+++ b/Comp2614Assignment4/Comp2614Assignment4.csproj
@@ -72,7 +72,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transaction.cs" />
+    <Compile Include="TransferFundsDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TransferFundsDialog.Designer.cs">
+      <DependentUpon>TransferFundsDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utils.cs" />
+    <Compile Include="WithdrawalTransaction.cs" />
     <EmbeddedResource Include="DepositDialog.resx">
       <DependentUpon>DepositDialog.cs</DependentUpon>
     </EmbeddedResource>
@@ -91,6 +98,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TransferFundsDialog.resx">
+      <DependentUpon>TransferFundsDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
