Transfer funds + bugfixes
1. Added transfer funds dialog and class
2. Fixed some bugs in the way the balances were being adjusted for line
of credit, moved Withdraw method into the child classes

--- a/Comp2614Assignment4/Comp2614Assignment4.csproj
+++ b/Comp2614Assignment4/Comp2614Assignment4.csproj
@@ -78,6 +78,7 @@
     <Compile Include="TransferFundsDialog.Designer.cs">
       <DependentUpon>TransferFundsDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="TransferFundsTransaction.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="WithdrawalTransaction.cs" />
     <EmbeddedResource Include="DepositDialog.resx">
