--- a/Comp2614Assignment4/Comp2614Assignment4.csproj
+++ b/Comp2614Assignment4/Comp2614Assignment4.csproj
@@ -72,6 +72,13 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transaction.cs" />
+    <Compile Include="TransactionCollection.cs" />
+    <Compile Include="TransactionHistory.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TransactionHistory.Designer.cs">
+      <DependentUpon>TransactionHistory.cs</DependentUpon>
+    </Compile>
     <Compile Include="TransferFundsDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +106,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TransactionHistory.resx">
+      <DependentUpon>TransactionHistory.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TransferFundsDialog.resx">
       <DependentUpon>TransferFundsDialog.cs</DependentUpon>
     </EmbeddedResource>
