Design change: move customer into dialogs
Also added more Error providers and added Exception classes

--- a/Comp2614Assignment4/Comp2614Assignment4.csproj
+++ b/Comp2614Assignment4/Comp2614Assignment4.csproj
@@ -57,6 +57,7 @@
       <DependentUpon>DepositDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="DepositTransaction.cs" />
+    <Compile Include="Exceptions.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
